Reviewing code used in chrome API through exercises

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div id="apple-shelf"></div>
-        <div id="orange-shelf"></div>
+        <button id="btn-el">LOG BILAL'S SCORE</button>
     </body>
 </html>
