Added styling and container elements for an exercise on manipulating DOM. Finished all exercises.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     </head>
     <body>
         <button id="btn-el">LOG BILAL'S SCORE</button>
+        <h1>The Brooklyn Agency</h1>
+        <div id="container">
+            <!-- <img class="team-img" src="per1.png">
+            <img class="team-img" src="per2.jpg">
+            <img class="team-img" src="per3.jpg"> -->
+        </div>
     </body>
 </html>
